[gd_scene load_steps=25 format=4 uid="uid://k6ra4mvps7no"]

[ext_resource type="Script" path="res://levelgen/room/room.gd" id="1_ledtx"]
[ext_resource type="Texture2D" uid="uid://bma1ouoy4ubsj" path="res://assets/tilesetx2.png" id="2_2ekjk"]
[ext_resource type="Script" path="res://levelgen/room/base_floor.gd" id="3_j0nrs"]
[ext_resource type="Script" path="res://levelgen/room/door.gd" id="4_mtjye"]
[ext_resource type="Script" path="res://levelgen/room/player_detection_zone.gd" id="5_7wlj4"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_ddq3d"]
vertices = PackedVector2Array(16, 16, -16, 16, -16, -16, 16, -16)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_7818v"]
vertices = PackedVector2Array(16, 16, -16, 16, -16, -16, 16, -16)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_althm"]
vertices = PackedVector2Array(16, 16, -16, 16, -16, -16, 16, -16)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_ddk65"]
vertices = PackedVector2Array(16, 16, -16, 16, -16, -16, 16, -16)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_8fwa7"]
vertices = PackedVector2Array(16, 16, -16, 16, -16, -16, 16, -16)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_rs0wc"]
vertices = PackedVector2Array(16, 16, -16, 16, -16, -16, 16, -16)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_0xbv0"]
vertices = PackedVector2Array(16, 16, -16, 16, -16, -16, 16, -16)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_3taqb"]
vertices = PackedVector2Array(16, 16, -16, 16, -16, -16, 16, -16)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_4sj52"]
vertices = PackedVector2Array(16, 16, -16, 16, -16, -16, 16, -16)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_j6nys"]
vertices = PackedVector2Array(16, 16, -16, 16, -16, -16, 16, -16)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_f5spc"]
vertices = PackedVector2Array(16, 16, -16, 16, -16, -16, 16, -16)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)])
agent_radius = 0.0

[sub_resource type="NavigationPolygon" id="NavigationPolygon_xtw64"]
vertices = PackedVector2Array(16, 16, -16, 16, -16, -16, 16, -16)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)])
agent_radius = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_2wj7e"]
texture = ExtResource("2_2ekjk")
texture_region_size = Vector2i(32, 32)
0:1/0 = 0
0:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_ddq3d")
1:1/0 = 0
1:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_althm")
2:1/0 = 0
2:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_8fwa7")
3:1/0 = 0
3:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_0xbv0")
4:1/0 = 0
4:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_4sj52")
5:1/0 = 0
5:1/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_f5spc")
1:2/0 = 0
1:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_ddk65")
2:2/0 = 0
2:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_rs0wc")
3:2/0 = 0
3:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_3taqb")
4:2/0 = 0
4:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_j6nys")
5:2/0 = 0
5:2/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_xtw64")
1:0/0 = 0
1:0/0/navigation_layer_0/polygon = SubResource("NavigationPolygon_7818v")

[sub_resource type="TileSet" id="TileSet_wj5yq"]
tile_size = Vector2i(32, 32)
navigation_layer_0/layers = 1
sources/0 = SubResource("TileSetAtlasSource_2wj7e")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_qcfkg"]
texture = ExtResource("2_2ekjk")
texture_region_size = Vector2i(32, 32)
2:4/0 = 0
1:0/0 = 0

[sub_resource type="TileSet" id="TileSet_skhug"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_qcfkg")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_d12ns"]
texture = ExtResource("2_2ekjk")
texture_region_size = Vector2i(32, 32)
9:7/0 = 0
9:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
10:7/0 = 0
10:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
8:7/0 = 0
8:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
8:6/0 = 0
8:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
8:5/0 = 0
8:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
9:5/0 = 0
9:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
10:5/0 = 0
10:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
10:6/0 = 0
10:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)

[sub_resource type="TileSet" id="TileSet_bhh6t"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
sources/2 = SubResource("TileSetAtlasSource_d12ns")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_43tfm"]
size = Vector2(600, 600)

[node name="Room" type="Node2D" node_paths=PackedStringArray("room_doors")]
script = ExtResource("1_ledtx")
relative_map_positions = Array[Vector2i]([Vector2i(0, 0)])
room_doors = [NodePath("Doors/LeftDoor"), NodePath("Doors/RightDoor"), NodePath("Doors/BottomDoor"), NodePath("Doors/TopDoor")]

[node name="BaseFloor" type="TileMapLayer" parent="."]
z_index = -100
tile_map_data = PackedByteArray("AAD3//f/AAABAAAAAAD3//j/AAABAAAAAAD3//n/AAABAAAAAAD3//r/AAABAAAAAAD3//v/AAABAAAAAAD3//z/AAABAAAAAAD3//3/AAABAAAAAAD3//7/AAABAAAAAAD3////AAABAAAAAAD3/wAAAAABAAAAAAD3/wEAAAABAAAAAAD3/wIAAAABAAAAAAD3/wMAAAABAAAAAAD3/wQAAAABAAAAAAD3/wUAAAABAAAAAAD3/wYAAAABAAAAAAD3/wcAAAABAAAAAAD3/wgAAAABAAAAAAD4//f/AAABAAAAAAD4//j/AAABAAAAAAD4//n/AAABAAAAAAD4//r/AAABAAAAAAD4//v/AAABAAAAAAD4//z/AAABAAAAAAD4//3/AAABAAAAAAD4//7/AAABAAAAAAD4////AAABAAAAAAD4/wAAAAABAAAAAAD4/wEAAAABAAAAAAD4/wIAAAABAAAAAAD4/wMAAAABAAAAAAD4/wQAAAABAAAAAAD4/wUAAAABAAAAAAD4/wYAAAABAAAAAAD4/wcAAAABAAAAAAD4/wgAAAABAAAAAAD5//f/AAABAAAAAAD5//j/AAABAAAAAAD5//n/AAABAAAAAAD5//r/AAABAAAAAAD5//v/AAABAAAAAAD5//z/AAABAAAAAAD5//3/AAABAAAAAAD5//7/AAABAAAAAAD5////AAABAAAAAAD5/wAAAAABAAAAAAD5/wEAAAABAAAAAAD5/wIAAAABAAAAAAD5/wMAAAABAAAAAAD5/wQAAAABAAAAAAD5/wUAAAABAAAAAAD5/wYAAAABAAAAAAD5/wcAAAABAAAAAAD5/wgAAAABAAAAAAD6//f/AAABAAAAAAD6//j/AAABAAAAAAD6//n/AAABAAAAAAD6//r/AAABAAAAAAD6//v/AAABAAAAAAD6//z/AAABAAAAAAD6//3/AAABAAAAAAD6//7/AAABAAAAAAD6////AAABAAAAAAD6/wAAAAABAAAAAAD6/wEAAAABAAAAAAD6/wIAAAABAAAAAAD6/wMAAAABAAAAAAD6/wQAAAABAAAAAAD6/wUAAAABAAAAAAD6/wYAAAABAAAAAAD6/wcAAAABAAAAAAD6/wgAAAABAAAAAAD7//f/AAABAAAAAAD7//j/AAABAAAAAAD7//n/AAABAAAAAAD7//r/AAABAAAAAAD7//v/AAABAAAAAAD7//z/AAABAAAAAAD7//3/AAABAAAAAAD7//7/AAABAAAAAAD7////AAABAAAAAAD7/wAAAAABAAAAAAD7/wEAAAABAAAAAAD7/wIAAAABAAAAAAD7/wMAAAABAAAAAAD7/wQAAAABAAAAAAD7/wUAAAABAAAAAAD7/wYAAAABAAAAAAD7/wcAAAABAAAAAAD7/wgAAAABAAAAAAD8//f/AAABAAAAAAD8//j/AAABAAAAAAD8//n/AAABAAAAAAD8//r/AAABAAAAAAD8//v/AAABAAAAAAD8//z/AAABAAAAAAD8//3/AAABAAAAAAD8//7/AAABAAAAAAD8////AAABAAAAAAD8/wAAAAABAAAAAAD8/wEAAAABAAAAAAD8/wIAAAABAAAAAAD8/wMAAAABAAAAAAD8/wQAAAABAAAAAAD8/wUAAAABAAAAAAD8/wYAAAABAAAAAAD8/wcAAAABAAAAAAD8/wgAAAABAAAAAAD9//f/AAABAAAAAAD9//j/AAABAAAAAAD9//n/AAABAAAAAAD9//r/AAABAAAAAAD9//v/AAABAAAAAAD9//z/AAABAAAAAAD9//3/AAABAAAAAAD9//7/AAABAAAAAAD9////AAABAAAAAAD9/wAAAAABAAAAAAD9/wEAAAABAAAAAAD9/wIAAAABAAAAAAD9/wMAAAABAAAAAAD9/wQAAAABAAAAAAD9/wUAAAABAAAAAAD9/wYAAAABAAAAAAD9/wcAAAABAAAAAAD9/wgAAAABAAAAAAD+//f/AAABAAAAAAD+//j/AAABAAAAAAD+//n/AAABAAAAAAD+//r/AAABAAAAAAD+//v/AAABAAAAAAD+//z/AAABAAAAAAD+//3/AAABAAAAAAD+//7/AAABAAAAAAD+////AAABAAAAAAD+/wAAAAABAAAAAAD+/wEAAAABAAAAAAD+/wIAAAABAAAAAAD+/wMAAAABAAAAAAD+/wQAAAABAAAAAAD+/wUAAAABAAAAAAD+/wYAAAABAAAAAAD+/wcAAAABAAAAAAD+/wgAAAABAAAAAAD///f/AAABAAAAAAD///j/AAABAAAAAAD///n/AAABAAAAAAD///r/AAABAAAAAAD///v/AAABAAAAAAD///z/AAABAAAAAAD///3/AAABAAAAAAD///7/AAABAAAAAAD/////AAABAAAAAAD//wAAAAABAAAAAAD//wEAAAABAAAAAAD//wIAAAABAAAAAAD//wMAAAABAAAAAAD//wQAAAABAAAAAAD//wUAAAABAAAAAAD//wYAAAABAAAAAAD//wcAAAABAAAAAAD//wgAAAABAAAAAAAAAPf/AAABAAAAAAAAAPj/AAABAAAAAAAAAPn/AAABAAAAAAAAAPr/AAABAAAAAAAAAPv/AAABAAAAAAAAAPz/AAABAAAAAAAAAP3/AAABAAAAAAAAAP7/AAABAAAAAAAAAP//AAABAAAAAAAAAAAAAAABAAAAAAAAAAEAAAABAAAAAAAAAAIAAAABAAAAAAAAAAMAAAABAAAAAAAAAAQAAAABAAAAAAAAAAUAAAABAAAAAAAAAAYAAAABAAAAAAAAAAcAAAABAAAAAAAAAAgAAAABAAAAAAABAPf/AAABAAAAAAABAPj/AAABAAAAAAABAPn/AAABAAAAAAABAPr/AAABAAAAAAABAPv/AAABAAAAAAABAPz/AAABAAAAAAABAP3/AAABAAAAAAABAP7/AAABAAAAAAABAP//AAABAAAAAAABAAAAAAABAAAAAAABAAEAAAABAAAAAAABAAIAAAABAAAAAAABAAMAAAABAAAAAAABAAQAAAABAAAAAAABAAUAAAABAAAAAAABAAYAAAABAAAAAAABAAcAAAABAAAAAAABAAgAAAABAAAAAAACAPf/AAABAAAAAAACAPj/AAABAAAAAAACAPn/AAABAAAAAAACAPr/AAABAAAAAAACAPv/AAABAAAAAAACAPz/AAABAAAAAAACAP3/AAABAAAAAAACAP7/AAABAAAAAAACAP//AAABAAAAAAACAAAAAAABAAAAAAACAAEAAAABAAAAAAACAAIAAAABAAAAAAACAAMAAAABAAAAAAACAAQAAAABAAAAAAACAAUAAAABAAAAAAACAAYAAAABAAAAAAACAAcAAAABAAAAAAACAAgAAAABAAAAAAADAPf/AAABAAAAAAADAPj/AAABAAAAAAADAPn/AAABAAAAAAADAPr/AAABAAAAAAADAPv/AAABAAAAAAADAPz/AAABAAAAAAADAP3/AAABAAAAAAADAP7/AAABAAAAAAADAP//AAABAAAAAAADAAAAAAABAAAAAAADAAEAAAABAAAAAAADAAIAAAABAAAAAAADAAMAAAABAAAAAAADAAQAAAABAAAAAAADAAUAAAABAAAAAAADAAYAAAABAAAAAAADAAcAAAABAAAAAAADAAgAAAABAAAAAAAEAPf/AAABAAAAAAAEAPj/AAABAAAAAAAEAPn/AAABAAAAAAAEAPr/AAABAAAAAAAEAPv/AAABAAAAAAAEAPz/AAABAAAAAAAEAP3/AAABAAAAAAAEAP7/AAABAAAAAAAEAP//AAABAAAAAAAEAAAAAAABAAAAAAAEAAEAAAABAAAAAAAEAAIAAAABAAAAAAAEAAMAAAABAAAAAAAEAAQAAAABAAAAAAAEAAUAAAABAAAAAAAEAAYAAAABAAAAAAAEAAcAAAABAAAAAAAEAAgAAAABAAAAAAAFAPf/AAABAAAAAAAFAPj/AAABAAAAAAAFAPn/AAABAAAAAAAFAPr/AAABAAAAAAAFAPv/AAABAAAAAAAFAPz/AAABAAAAAAAFAP3/AAABAAAAAAAFAP7/AAABAAAAAAAFAP//AAABAAAAAAAFAAAAAAABAAAAAAAFAAEAAAABAAAAAAAFAAIAAAABAAAAAAAFAAMAAAABAAAAAAAFAAQAAAABAAAAAAAFAAUAAAABAAAAAAAFAAYAAAABAAAAAAAFAAcAAAABAAAAAAAFAAgAAAABAAAAAAAGAPf/AAABAAAAAAAGAPj/AAABAAAAAAAGAPn/AAABAAAAAAAGAPr/AAABAAAAAAAGAPv/AAABAAAAAAAGAPz/AAABAAAAAAAGAP3/AAABAAAAAAAGAP7/AAABAAAAAAAGAP//AAABAAAAAAAGAAAAAAABAAAAAAAGAAEAAAABAAAAAAAGAAIAAAABAAAAAAAGAAMAAAABAAAAAAAGAAQAAAABAAAAAAAGAAUAAAABAAAAAAAGAAYAAAABAAAAAAAGAAcAAAABAAAAAAAGAAgAAAABAAAAAAAHAPf/AAABAAAAAAAHAPj/AAABAAAAAAAHAPn/AAABAAAAAAAHAPr/AAABAAAAAAAHAPv/AAABAAAAAAAHAPz/AAABAAAAAAAHAP3/AAABAAAAAAAHAP7/AAABAAAAAAAHAP//AAABAAAAAAAHAAAAAAABAAAAAAAHAAEAAAABAAAAAAAHAAIAAAABAAAAAAAHAAMAAAABAAAAAAAHAAQAAAABAAAAAAAHAAUAAAABAAAAAAAHAAYAAAABAAAAAAAHAAcAAAABAAAAAAAHAAgAAAABAAAAAAAIAPf/AAABAAAAAAAIAPj/AAABAAAAAAAIAPn/AAABAAAAAAAIAPr/AAABAAAAAAAIAPv/AAABAAAAAAAIAPz/AAABAAAAAAAIAP3/AAABAAAAAAAIAP7/AAABAAAAAAAIAP//AAABAAAAAAAIAAAAAAABAAAAAAAIAAEAAAABAAAAAAAIAAIAAAABAAAAAAAIAAMAAAABAAAAAAAIAAQAAAABAAAAAAAIAAUAAAABAAAAAAAIAAYAAAABAAAAAAAIAAcAAAABAAAAAAAIAAgAAAABAAAAAAA=")
tile_set = SubResource("TileSet_wj5yq")
script = ExtResource("3_j0nrs")
TOP_LEFT_POSITION = Vector2i(-9, -9)
BOTTOM_RIGHT_POSITION = Vector2i(9, 9)

[node name="ExitFloors" type="TileMapLayer" parent="."]
z_index = -100
tile_map_data = PackedByteArray("AAAJAP7/AAACAAQAAAD+//b/AAACAAQAAGD+/wkAAAACAAQAAGD2/wEAAAACAAQAADAJAAEAAAACAAQAADABAAkAAAACAAQAAFABAPb/AAACAAQAAFAAAAkAAAABAAAAAAD//wkAAAABAAAAAAD2//7/AAACAAQAAAD2////AAABAAAAAAD2/wAAAAABAAAAAAD///b/AAABAAAAAAAAAPb/AAABAAAAAAAJAP//AAABAAAAAAAJAAAAAAABAAAAAAA=")
tile_set = SubResource("TileSet_skhug")

[node name="BaseWalls" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD9//b/AgAJAAUAAAD8//b/AgAJAAUAAAD7//b/AgAJAAUAAAD6//b/AgAJAAUAAAD5//b/AgAJAAUAAAD4//b/AgAJAAUAAAD3//b/AgAJAAUAAAD2//b/AgAIAAUAAAD2//f/AgAIAAYAAAD2//j/AgAIAAYAAAD2//n/AgAIAAYAAAD2//r/AgAIAAYAAAD2//v/AgAIAAYAAAD2//z/AgAIAAYAAAD2//3/AgAIAAYAAAD2/wIAAgAIAAYAAAD2/wMAAgAIAAYAAAD2/wQAAgAIAAYAAAD2/wUAAgAIAAYAAAD2/wYAAgAIAAYAAAD2/wcAAgAIAAYAAAD2/wgAAgAIAAYAAAD2/wkAAgAIAAcAAAD3/wkAAgAJAAcAAAD4/wkAAgAJAAcAAAD5/wkAAgAJAAcAAAD6/wkAAgAJAAcAAAD7/wkAAgAJAAcAAAD8/wkAAgAJAAcAAAD9/wkAAgAJAAcAAAAJAAgAAgAKAAYAAAAJAAcAAgAKAAYAAAAJAAYAAgAKAAYAAAAJAAUAAgAKAAYAAAAJAAQAAgAKAAYAAAAJAAMAAgAKAAYAAAAJAAIAAgAKAAYAAAAJAP3/AgAKAAYAAAAJAPz/AgAKAAYAAAAJAPv/AgAKAAYAAAAJAPr/AgAKAAYAAAAJAPn/AgAKAAYAAAAJAPj/AgAKAAYAAAAJAPf/AgAKAAYAAAAJAPb/AgAKAAUAAAAIAPb/AgAJAAUAAAAHAPb/AgAJAAUAAAAGAPb/AgAJAAUAAAAFAPb/AgAJAAUAAAAEAPb/AgAJAAUAAAADAPb/AgAJAAUAAAACAPb/AgAJAAUAAAACAAkAAgAJAAcAAAADAAkAAgAJAAcAAAAEAAkAAgAJAAcAAAAFAAkAAgAJAAcAAAAGAAkAAgAJAAcAAAAHAAkAAgAJAAcAAAAIAAkAAgAJAAcAAAAJAAkAAgAKAAcAAAA=")
tile_set = SubResource("TileSet_bhh6t")

[node name="Objects" type="Node2D" parent="."]

[node name="Doors" type="Node2D" parent="."]

[node name="LeftDoor" type="TileMapLayer" parent="Doors"]
tile_map_data = PackedByteArray("AAD2/wEAAgAIAAYAAAD2/wAAAgAIAAYAAAD2////AgAIAAYAAAD2//7/AgAIAAYAAAA=")
enabled = false
tile_set = SubResource("TileSet_bhh6t")
script = ExtResource("4_mtjye")
relative_next_room_position = Vector2i(-1, 0)

[node name="RightDoor" type="TileMapLayer" parent="Doors"]
tile_map_data = PackedByteArray("AAAJAP7/AgAKAAYAAAAJAP//AgAKAAYAAAAJAAAAAgAKAAYAAAAJAAEAAgAKAAYAAAA=")
enabled = false
tile_set = SubResource("TileSet_bhh6t")
script = ExtResource("4_mtjye")
relative_next_room_position = Vector2i(1, 0)

[node name="BottomDoor" type="TileMapLayer" parent="Doors"]
tile_map_data = PackedByteArray("AAD+/wkAAgAJAAcAAAD//wkAAgAJAAcAAAAAAAkAAgAJAAcAAAABAAkAAgAJAAcAAAA=")
enabled = false
tile_set = SubResource("TileSet_bhh6t")
script = ExtResource("4_mtjye")
relative_next_room_position = Vector2i(0, 1)

[node name="TopDoor" type="TileMapLayer" parent="Doors"]
tile_map_data = PackedByteArray("AAD+//b/AgAJAAUAAAD///b/AgAJAAUAAAAAAPb/AgAJAAUAAAABAPb/AgAJAAUAAAA=")
enabled = false
tile_set = SubResource("TileSet_bhh6t")
script = ExtResource("4_mtjye")
relative_next_room_position = Vector2i(0, -1)

[node name="PlayerDetectionZone" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2
script = ExtResource("5_7wlj4")
WIDTH = 640
HEIGHT = 640

[node name="Collision2D" type="CollisionShape2D" parent="PlayerDetectionZone"]
shape = SubResource("RectangleShape2D_43tfm")

[connection signal="body_entered" from="PlayerDetectionZone" to="PlayerDetectionZone" method="_on_body_entered"]
